[package]
name = "rust-tenable-api"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin M. Singleton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.9", features = ["blocking"]}
error-chain = "0.12.4"
futures = "0.3.21" # for our async / await blocks
tokio = { version = "1.16.1", features = ["full"] }
serde_json = "1.0.59"
